# dotfiles

./: .gitignore  .gitmodules  .tmux.conf  PLANS  README.md  TODO  alacritty.toml  aliases.sh  bash_aliases  bashrc  cmus.rc  cmus.theme  colors.sh  commands.sh  crontab  ctrlp_cache.sh  deploy.sh  deploy_bashrc.sh  deploy_dircolors.sh  deploy_gdbinit.sh  deploy_gitconfig.sh  deploy_gtkrc.sh  deploy_inputrc.sh  deploy_tmux_conf.sh  deps.yaml  env.sh  fzf-init.sh  gdbinit  gitconfig  gitignore  gtkrc-2.0  hello.gm  histfile.gpg  htoprc  i3.config  i3blocks.conf  i3status.conf  inputrc  jails.json  keynavrc  (+26 more)
.zed/: debug.json  tasks.json
LaunchAgents/: com.gmoshkin.ssh-socks-proxy.plist  com.gmoshkin.sthp-http-proxy.plist
apex/: README.txt  settings.cfg
cargo/: config.toml
go/: hello.go
i3blocks/: battery  button  volume  wifi
jai/: aliases-linux  aliases-macos  aliases.jai  braille.jai  build.jai  clipboard.jai  convert_wsl_paths  convert_wsl_paths.jai  find_windows_dev_kit.jai  goto-definition.jai  jails.json  msgpack.jai  myps  myps-linux  myps-macos  pageview  pageview-linux  pageview-macos  pageview.jai  parse  parse.jai  print-recursive.jai  print_method.jai  prompt.jai  ps  ps.jai  static-var  static-var.jai  string-notes.jai  stuff.jai  term_color.jai  tests.jai  tmux-util.jai  valheim-map.jai  window-test.jai  windows_battery.jai  windows_get_env.jai  x11-keyboard-input.jai  x11-transparent-window.jai
kak/: kakrc
load-using-bug/: main  main.jai
notes/: big-snapshots.md  pres-interop.md  (+5 more)
scripts/nvim-cli/: Cargo.toml
scripts/nvim-cli/src/: main.rs
(+302 files in other folders)
