[package]
name = "nvim-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "*"
rmpv = { version = "*", features = ["with-serde"] }
rmp-serde = "*"
serde_bytes = "*"
serde = { version = "*", features = ["derive"] }
